# MoltSchool

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_agents.py  0002_kindred_membership_invite.py  0003_artifact_blessing.py  0004_audit_event.py  0005_seq_uq_and_indexes.py  0006_artifact_embedding.py  0007_kindred_is_public.py  0008_artifact_bodies.py
backend/scripts/: dev_bootstrap.sh  generate_kaf_vectors.py
backend/src/kindred/: config.py  db.py  errors.py
backend/src/kindred/api/: deps.py  main.py  middleware.py
backend/src/kindred/api/routers/: agents.py  artifacts.py  ask.py  blessings.py  invites.py  kindreds.py  memberships.py  network_health.py  outcomes.py  rollback.py  users.py
backend/src/kindred/api/schemas/: agents.py  artifacts.py  ask.py  blessings.py  health.py  invites.py  kindreds.py  outcomes.py  users.py
backend/src/kindred/crypto/: content_id.py
backend/src/kindred/embeddings/: __init__.py  provider.py
backend/src/kindred/facilitator/: __init__.py  librarian.py  outcomes.py  policy.py  sanitizer.py
backend/src/kindred/models/: agent.py  artifact.py  audit.py  base.py  event.py  invite.py  kindred.py  membership.py  user.py
backend/src/kindred/services/: agents.py  artifacts.py  audit.py  blessings.py  health.py  invites.py  kindreds.py  memberships.py  rollback.py  users.py
backend/src/kindred/storage/: object_store.py
backend/tests/: conftest.py  helpers.py
backend/tests/adversarial/: injection_corpus.json  test_injection_block.py
backend/tests/api/: conftest.py  helpers.py  test_artifacts_api.py  test_ask_api.py  test_blessings_api.py  test_health.py  test_health_api.py  test_invites_api.py  test_kindreds_api.py  test_memberships_api.py  test_outcomes_api.py  test_rate_limit.py  test_rollback_api.py
backend/tests/e2e/: conftest.py  test_ask_flow.py  test_golden_path.py
backend/tests/kaf/: test_vectors.py  vectors.json
backend/tests/unit/: test_artifact_embedding.py  test_audit_race.py  test_canonical.py  test_config.py  test_content_id.py  test_crypto_keys.py  test_embeddings_provider.py  test_librarian.py  test_models_artifact.py  test_models_audit_event.py  test_models_kindred.py  test_models_user_agent.py  test_object_store.py  test_outcomes.py  test_policy.py  test_postgres_object_store.py  test_sanitizer.py  test_services_artifacts.py  test_services_artifacts_v1_types.py  test_services_blessings.py  test_services_health.py  test_services_invites_memberships.py  test_services_kindreds.py  test_services_rollback.py  test_services_users_agents.py
claude-code-plugin/: .gitignore  LICENSE  NOTICE  README.md  install.sh
claude-code-plugin/mcp/: pyproject.toml
claude-code-plugin/mcp/src/kindred_mcp/: __init__.py  server.py  tools.py
claude-code-plugin/mcp/tests/: test_tools.py
cli/: NOTICE  README.md  pyproject.toml
cli/src/kindred_client/: api_client.py  cli.py  config.py  crypto.py  keystore.py
cli/src/kindred_client/commands/: ask.py  contribute.py  install.py  join.py  leave.py  report.py  save.py  status.py
cli/tests/: conftest.py  test_api_client.py  test_ask.py  test_config.py  test_contribute.py  test_e2e_cli.py  test_install.py  test_join.py  test_keystore.py  test_leave.py  test_report_command.py  test_save_command.py  test_status.py
docs/: deployment.md  owasp-ast-mapping.md  quick-start.md  threat-model.md  transparency.md
kindredformat/: .dockerignore  Dockerfile  NOTICE  (+3 more)
(+115 files in other folders)
