[project]
name = "kindred-client"
version = "0.1.0"
description = "Kindred CLI (kin)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pynacl>=1.5",
    "platformdirs>=4.3",
    "tomli-w>=1.1",
    "rich>=13.8",
]

[project.scripts]
kin = "kindred_client.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindred_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
