[project]
name = "kindred-client"
version = "0.1.0"
description = "Kindred CLI (kin)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pynacl>=1.5",
    "platformdirs>=4.3",
    "tomli-w>=1.1",
    "rich>=13.8",
]

[project.scripts]
kin = "kindred_client.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]
# e2e pulls in the backend via a path install so the CLI test can mount the
# FastAPI app through httpx's ASGITransport without hitting a real network.
e2e = [
    "kindred-backend",
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic-settings>=2.5",
]

[tool.uv.sources]
kindred-backend = { path = "../backend" }

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindred_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests (skipped unless KINDRED_E2E=1)",
]
