[project]
name = "kindred-mcp"
version = "0.1.0"
description = "Kindred MCP server exposing kin_ask / kin_contribute for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pynacl>=1.5",
    "kindred-client",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
kindred-client = { path = "../../cli" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindred_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
